samples/_failures_safe/1761479382_18e174_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22e52428.c: In function ‘main’:
./samples/SAFE/__tmp_22e52428.c:159:19: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  159 |     print_matrix(&mat
      |                   ^~~
      |                   mat2
./samples/SAFE/__tmp_22e52428.c:159:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_22e52428.c:159:22: error: expected ‘)’ at end of input
  159 |     print_matrix(&mat
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_22e52428.c:159:5: error: expected declaration or statement at end of input
  159 |     print_matrix(&mat
      |     ^~~~~~~~~~~~
